# libsendao

./: CMakeLists.txt  expr.cpp.txt  mkbuild  mkdebug  sendaoConfig.cmake
include/: folds.h  hot.h  lists.h  maps.h  pack.h  recurse.h  sendao.h  senutil.h  sort.h  tables.h  tree.h
oldmake/: Makefile.linux  autoinstall.bat  install.bat  makefile.defs
src/: config.cpp  folds.cpp  hot.cpp  list.cpp  maps.cpp  pack.cpp  ptr.cpp  recurse.cpp  sort.cpp  string.cpp  system.cpp  tree.cpp  util.cpp
